[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procastinatrix"
version = "0.1.3"
description = "A procrastination helper package"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Abid Ali Qureshi" }
]
dependencies = []

[tool.setuptools]
packages = ["procastinatrix"]